8152896: Convert PrintCompressedOopsMode to Unified Logging
Converted -XX:+PrintCompressedOopsMode to -Xlog:gc+heap+coops and aliased old option

Reviewed-by: coleenp, sjohanss, kvn, hseigel